<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestingAndroidFunctionallity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Item</string>
    <string name="show_popup"> Show Popup Menu </string>
    <string name="action_add">Add Item</string>
    <string name="start_service_text">Start Service</string>
    <string name="stop_service_text">Stop Service</string>
    <string name="inflate_view_text"> Inflate View </string>
    <string name="inflated_view_text"> Inflated View </string>
    <string name="draw_on_canvas_text"> Draw On Canvas </string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_gift_list">Gifts</string>
    <string name="title_gift_detail">Gift Detail</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
